# multimodal-examples

./: .gitignore
mllm-demo/: .gitignore  OUTPUT_LAYOUT.md  README.md  REPO_ALIGNMENT.md  pyproject.toml
mllm-demo/docs/: 9.1.1_实验背景与目标.md  9.1.2_模型代码_从最小视觉语言骨架到统一生成接口.md  9.1.3_分阶段实验与结果分析.md  9.1.4_简单总结.md  9.1_实战：从最小视觉语言模型到多任务统一.md  9.2.1_实验背景与目标.md  9.2.2_模型代码_从最小视觉语言骨架到统一生成接口.md  9.2.3.1_Part1_最小视觉语言模型的建立.md  9.2.3.2_Part2_把检测任务改写为生成任务.md  9.2.3.3_Part3_视觉问答.md  9.2.3.4_Part4_多任务统一.md  9.2.4_简单总结.md  _encoding_test.md  model_code_overview.md  model_full_code.md
mllm-demo/output/part1/: eval_sample_input.jsonl  experiment_summary.md  losses.json  metrics.jsonl  run_config.json  run_summary.json
mllm-demo/output/part1_for_part4/: experiment_summary.md  losses.json  metrics.jsonl  run_config.json  run_summary.json
mllm-demo/output/part2/: config.json  eval_sample_input.jsonl  experiment_summary.md  losses.json  metrics.jsonl  run_config.json  run_summary.json
mllm-demo/output/part3/: eval_sample_input.jsonl  experiment_summary.md  losses.json  metrics.jsonl  run_config.json  run_summary.json
mllm-demo/output/part4/: config.json  eval_sample_input.jsonl  losses.json  (+4 more)
mllm-demo/scripts/: eval_checkpoint.ps1  infer_caption.ps1  plot_metrics.ps1  prepare_repo_data.ps1  train_caption.ps1  train_detection.ps1  train_multitask.ps1  train_part1_for_part4_branch.ps1  train_part1_like_repo.ps1  train_part2_like_repo.ps1  train_part3_like_repo.ps1  train_part4_like_repo.ps1  train_vqa.ps1
mllm-demo/tools/: build_tiny_dataset.py  plot_metrics.py  prepare_repo_data.py
(+91 files in other folders)
